Copies and Frameworks is hard - Casey
