# src/routes/games.js
@@ -2,6 +2,9 @@ const express = require("express");
 const router = express.Router();
 const gameController = require("../controllers/gameController");
 
+// GET request for list of all games
+router.get("/", gameController.getAllGames);
+
 // PUT request to add or update a game
 router.put("/:id", gameController.addOrUpdateGame);
 
