# swagger.json
@@ -15,12 +15,12 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8080",
-      "description": "Local development server"
-    },
-    {
       "url": "https://webservices-videogamesdb-age0.onrender.com",
       "description": "Production server"
+    },
+    {
+      "url": "http://localhost:8080",
+      "description": "Local development server"
     }
   ],
   "tags": [
@@ -310,7 +310,140 @@
         }
       }
     },
-    "/games/{id}": {
+    "/copies/": {
+      "get": {
+        "tags": [
+          "Copies"
+        ],
+        "summary": "Get all copies",
+        "description": "Returns all copies in the database",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Copies"
+        ],
+        "summary": "Add or update a copy",
+        "description": "Add or update a copy",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "downloaded": {
+                    "example": "any"
+                  },
+                  "physical": {
+                    "example": "any"
+                  },
+                  "gameTitle": {
+                    "example": "any"
+                  },
+                  "consoles": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/copies/{id}": {
+      "get": {
+        "tags": [
+          "Copies"
+        ],
+        "summary": "Get a copy by game title",
+        "description": "Returns a copy by game title",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Copies"
+        ],
+        "summary": "Delete a copy",
+        "description": "Delete a copy",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/": {
+      "get": {
+        "tags": [
+          "Games"
+        ],
+        "summary": "Get all games",
+        "description": "Returns all games in the database",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/{id}": {
       "put": {
         "tags": [
           "Games"
